--- a/index.html
+++ b/index.html
@@ -994,8 +994,8 @@
                 <h4>Horarios</h4>
                 <div class="hours-grid">
                     <span>Lunes:</span> <span style="color: #666;">Cerrado</span>
-                    <span>Martes a Sábado:</span> <span>10:00 - 14:00<br>18:30 - 00:00</span>
-                    <span>Domingo:</span> <span style="color: #666;">Cerrado</span>
+                    <span>Martes a Sábado:</span> <span>12:00 - 13:30<br>20:00 - 22:30</span>
+                    <span>Domingo:</span> <span>20:00 - 22:30</span> 
                 </div>
             </div>
 
@@ -1110,4 +1110,5 @@
 </body>
 
 </html>
+
 
