--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
                         </div>
                     </div>
                 </div>
-
+             </div>
                 <!-- PASTAS -->
                 <div class="menu-category">
                     <h4 class="menu-category-title">PASTAS</h4>
@@ -1117,6 +1117,7 @@
 </body>
 
 </html>
+
 
 
 
