--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                     </div>
                 </div>
 
-                <!-- EMPANADAS -->
+                <!-- EMPANADAS (CORREGIDO) -->
                 <div class="menu-category">
                     <h4 class="menu-category-title">EMPANADAS (x1)</h4>
                     <div class="menu-grid">
@@ -851,39 +851,45 @@
                                 <span class="item-name-canva">Dulces</span>
                                 <span class="item-price-canva">$2.000</span>
                             </div>
-                    <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Saladas</span>
-                            <span class="item-price-canva">$2.000</span>
                         </div>
-                    <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Jamón y Queso</span>
-                            <span class="item-price-canva">$2.000</span>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Saladas</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
                         </div>
-                    <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Pollo</span>
-                            <span class="item-price-canva">$2.000</span>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Jamón y Queso</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
                         </div>
-                    <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Arabes</span>
-                            <span class="item-price-canva">$2.000</span>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Pollo</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
                         </div>
-                    <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Verduras</span>
-                            <span class="item-price-canva">$2.000</span>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Arabes</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
                         </div>
-                     <div class="menu-item-canva">
-                        <div class="menu-item-header">
-                            <span class="item-name-canva">Cebolla y Muzza</span>
-                            <span class="item-price-canva">$2.000</span>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Verduras</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
+                        </div>
+                        <div class="menu-item-canva">
+                            <div class="menu-item-header">
+                                <span class="item-name-canva">Cebolla y Muzza</span>
+                                <span class="item-price-canva">$2.000</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-             </div>
                         
                 <!-- PASTAS -->
                 <div class="menu-category">
@@ -1118,9 +1124,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
